# ahody

./: Dockerfile  Makefile  README.md  compose.yaml  plan.md  pyproject.toml  scraped_articles.json  test_source_detection.py
app/: config.py  main.py  util.py
app/api/: deps.py  main.py
app/api/routes/: article.py  general_scrape.py  sources.py
app/core/: __init__.py  browser_service.py  browser_state_service.py  errors.py  models.py  ntm_login_service.py  nwt_login_service.py  scraper_agent.py  scraper_service.py
app/tests/: conftest.py
app/tests/api/: test_health.py
