[project]
name = "ahody"
version = "0.1.0"
description = "Article Scraper"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
packages = [{include = "app"}]

requires-python = ">=3.12,<4.0"

dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "playwright (>=1.51.0,<2.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "pydantic-ai (>=0.0.46,<0.1.0)",
    "click (>=8.1.8,<9.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
pytest = "^8.3.1"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
